added types + nanostores for feature parity

--- a/templates/src/pages/[...slug]/edit.astro
+++ b/templates/src/pages/[...slug]/edit.astro
@@ -144,7 +144,7 @@ for (const [key, value] of Astro.url.searchParams) {
     <main id="mainContent" class="relative flex-1">
       <div class="bg-myblue/20 bg-mylightgrey h-full p-1.5">
         <div
-          class="h-full h-screen"
+          class="h-fit min-h-screen"
           style={{
             backgroundImage:
               'repeating-linear-gradient(135deg, transparent, transparent 10px, rgba(0,0,0,0.05) 10px, rgba(0,0,0,0.05) 20px)',
