we got embedded menu editor

--- a/templates/src/components/Header.astro
+++ b/templates/src/components/Header.astro
@@ -316,7 +316,7 @@ const authStatus = {
   authStatus.isAdmin && (
     <div
       id="admin-modal"
-      class="fixed inset-0 z-9002 hidden bg-black bg-opacity-75"
+      class="z-9002 fixed inset-0 hidden bg-black bg-opacity-75"
       aria-labelledby="admin-modal-title"
       aria-hidden="true"
     >
