events on buttons

--- a/templates/src/components/Footer.astro
+++ b/templates/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
-import { preParseAction, lispLexer } from '@/utils/actions';
+import { lispLexer } from '@/utils/actions';
+import { preParseAction } from '@/utils/compositor/preParse_Action';
 import type { MenuNode } from '@/types/tractstack';
 
 export interface Props {
