we got impressions

--- a/templates/src/components/Footer.astro
+++ b/templates/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
-import { lispLexer } from '@/utils/actions';
-import { preParseAction } from '@/utils/compositor/preParse_Action';
+import { lispLexer } from '@/utils/actions/lispLexer';
+import { preParseAction } from '@/utils/actions/preParse_Action';
 import type { MenuNode } from '@/types/tractstack';
 
 export interface Props {
