we got sysop panel

--- a/templates/src/components/Header.astro
+++ b/templates/src/components/Header.astro
@@ -307,7 +307,8 @@ const authStatus = {
   authStatus.isAdmin && (
     <div
       id="admin-modal"
-      class="z-9002 fixed inset-0 hidden bg-black bg-opacity-75"
+      class="fixed inset-0 hidden bg-black bg-opacity-75"
+      style={{ zIndex: 9005 }}
       aria-labelledby="admin-modal-title"
       aria-hidden="true"
     >
