we got tailwind + save rough-in

--- a/templates/src/pages/[...slug]/edit.astro
+++ b/templates/src/pages/[...slug]/edit.astro
@@ -150,7 +150,7 @@ for (const [key, value] of Astro.url.searchParams) {
   <section
     id="storykeepHeader"
     role="banner"
-    class="bg-mywhite z-101 left-0 right-0 drop-shadow transition-all duration-200"
+    class="z-101 bg-mywhite left-0 right-0 drop-shadow transition-all duration-200"
   >
     <StoryKeepHeader
       slug={slug}
