--- a/templates/src/components/Footer.astro
+++ b/templates/src/components/Footer.astro
@@ -151,7 +151,7 @@ const createdDate = created ? new Date(created) : new Date();
     }
 
     <div
-      class="xs:flex-row text-myblue my-2 flex flex-col items-center justify-center"
+      class="text-myblue xs:flex-row my-2 flex flex-col items-center justify-center"
     >
       <div class="px-12 text-center text-2xl">
         Copyright &#169; {createdDate.getFullYear()}
@@ -160,7 +160,7 @@ const createdDate = created ? new Date(created) : new Date();
       </div>
     </div>
     <div
-      class="xs:flex-row text-myblue my-2 flex flex-col items-center justify-center"
+      class="text-myblue xs:flex-row my-2 flex flex-col items-center justify-center"
     >
       <div class="px-12 text-center text-lg">
         pressed with
